--- a/src/Components/Categorias.module.css
+++ b/src/Components/Categorias.module.css
@@ -1,27 +1,24 @@
 .nav {
-  width: 100%;
+  margin: 0 auto;
+  width: 80%;
   text-align: center;
   margin-top: 32px;
-  box-sizing: border-box;
 }
-
+.swiper-wrapper {
+  width: 125px;
+}
 .nav h3 {
   margin-bottom: 32px;
 }
 
-.slide ul{
-  display: grid;
-  grid-template-columns: repeat(5, minmax(60px,auto));
-  gap: 60px;
-  justify-content: center;
-}
+
 @media (max-width:1000px) {
-  .slide ul{
+  .inner{
     gap: 40px;
     }
 }
 @media (max-width:50rem) {
-  .slide ul{
+  .inner{
     gap: 40px;
     }
     .nav h3 {
@@ -33,13 +30,11 @@
 }
 
 @media (max-width:35rem) {
-  .slide ul{
+  .inner{
     margin: 0;
     padding: 0 50px;
-    width: auto;
-    overflow-x: auto;
   }
-  .slide ul{
+  .inner{
     gap: 40px;
     }
     .nav h3 {
