adicionando novo header e ajustando slide(ainda tem um bug)

--- a/src/Components/Infos.module.css
+++ b/src/Components/Infos.module.css
@@ -10,3 +10,11 @@
   justify-content: center;
   color: white;
 }
+
+.infos::before {
+  content: '';
+  display: block;
+  width: 25px;
+  height: 15px;
+  background: url('../assets/svg/svgHeader/caminhaoWhite.svg') no-repeat center center;
+}
