--- a/src/Components/Categorias.module.css
+++ b/src/Components/Categorias.module.css
@@ -4,11 +4,13 @@
   text-align: center;
   margin-top: 32px;
 }
-.swiper-wrapper {
-  width: 125px;
-}
+
 .nav h3 {
   margin-bottom: 32px;
+}
+
+.mySwaper{
+  /* z-index: -1 !important; */
 }
 
 
@@ -44,3 +46,4 @@
       margin-top: 16px;
     }
 }
+
