--- a/src/Header.module.css
+++ b/src/Header.module.css
@@ -1,3 +1,6 @@
+.body {
+  position: relative;
+}
 .header {
   position: fixed;
   top: 50px;
@@ -8,8 +11,58 @@
   justify-items: center;
   color: white;
 }
-.header svg {
-  /* max-width: 250px; */
+.header2{
+  background-color: white;
+  height: 60px;
+  top: 40px;
+  max-width: none;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, .3);
+  color: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bag {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: 15px;
+  right: 40px;
+  display: block;
+  width: 20px;
+  height: 20px;
+}
+.bag::after {
+  content: '';
+  display: none !important;
+}
+
+.logo2 svg{
+  top: 0px;
+  position: relative;
+  width: 130px;
+}
+.logo2 svg{
+  fill: #333;
+}
+
+
+.header2 nav ul li{
+  position: relative;
+}
+.header .links::after{
+  content: '';
+  display: block;
+  width: 2px;
+  height: 10px;
+  background: black;
+  top: 3px;
+  left: 130%;
+  position: absolute;
+}
+
+
+.logo{
   width: auto;
   height: 70px;
   margin-bottom: 24px;
@@ -47,7 +100,6 @@
 }
 
 .navContainer {
-  z-index: -2;
   background: rgba(0, 0, 0, 0.2);
   width: 100vw;
   height: 100vh;
@@ -66,11 +118,37 @@
   border-radius: .2rem;
   opacity: 0;
   pointer-events: none;
-  z-index: -1;
   height: 100vh;
   padding-top: 135px;
   padding-left: 45px;
   padding-right: 30px;
+}
+
+.headerMobile.header2 {
+  position: fixed;
+  display: grid;
+  grid-template-columns: 1fr ;
+  top: 40px;
+  left: 0;
+  width: 100%;
+  max-width: none;
+  justify-items: center;
+  color: white;
+}
+
+
+.navMobile.header2 .links{
+  position: relative;
+}
+.navMobile.header2 nav ul li::after{
+  content: '';
+  display: block;
+  width: 2px;
+  height: 10px;
+  background: black;
+  top: 3px;
+  left: 130%;
+  position: absolute;
 }
 
 .navMobileActive {
@@ -117,6 +195,12 @@
   transition: 0.1s;
   cursor: pointer;
   color: white;
+  z-index: 2000;
+}
+.header2 .mobileButton {
+  top: 50px;
+  color: #333;
+
 }
 
 .mobileButton::after {
@@ -164,6 +248,7 @@
   
   .navMobileActive {
     opacity: initial;
+
     pointer-events: initial;
   }
 
