--- a/src/Header.module.css
+++ b/src/Header.module.css
@@ -10,6 +10,7 @@
   max-width: 1280px;
   justify-items: center;
   color: white;
+  z-index: 100;
 }
 .header2{
   background-color: white;
@@ -21,6 +22,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 100;
 }
 .bag {
   width: 20px;
@@ -90,7 +92,9 @@
   max-width: 1280px;
   justify-items: center;
   color: white;
+  z-index: 99;
 }
+
 .headerNav svg {
   grid-row: 2;
   width: auto;
