--- a/src/App.css
+++ b/src/App.css
@@ -48,9 +48,15 @@ a {
   color: #333;
 }
 
+.HomeContainer {
+  max-width: 80rem;
+  margin: 0 auto;
+  margin-top: -120px;
+}
 .container {
   max-width: 80rem;
   margin: 0 auto;
+  padding-top: 120px;
 }
 
 .mainContainer {
