--- a/src/Components/Infos.module.css
+++ b/src/Components/Infos.module.css
@@ -3,12 +3,30 @@
   height: 40px;
   width: 100%;
   z-index: 100;
-  position: fixed;
+  position: absolute;
   top: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
+}
+.infos2 {
+  background-color: #FFBFD0;
+  display: flex;
+  gap: 6px;
+  height: 40px;
+  width: 100%;
+  z-index: 100;
+  position: absolute;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  color: #333;
+}
+.infos2 span {
+  font-weight: 500;
 }
 
 .infos::before {
@@ -17,4 +35,13 @@
   width: 25px;
   height: 15px;
   background: url('../assets/svg/svgHeader/caminhaoWhite.svg') no-repeat center center;
+}
+
+
+.infos2::before {
+  content: '';
+  display: block;
+  width: 25px;
+  height: 15px;
+  background: url('../assets/svg/svgHeader/caminhao.svg') no-repeat center center;
 }
