--- a/src/Components/produtos/Produto.module.css
+++ b/src/Components/produtos/Produto.module.css
@@ -1,9 +1,17 @@
 .produto {
   display: grid;
+  grid-template-rows: 1fr;
   gap: 16px;
 }
 .produto img {
   border-radius: .2rem;
+  width: 100%;
+  height: 100%;
+  max-width: 340px;
+  max-height: 450px;
+  max-width: 350px;
+  object-fit: fill;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, .3), 0px 0px 4px rgba(0, 0, 0, .2);
 }
 .infos {
   display: grid;
