--- a/src/Components/produtos/Produtos.module.css
+++ b/src/Components/produtos/Produtos.module.css
@@ -2,9 +2,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: 0 auto;
   text-align: center;
   max-width: 1280px;
   margin-top: 32px;
+  min-height: 600px;
 }
 .produtosContainer h3 {
   margin-bottom: 32px;
@@ -58,6 +60,7 @@
   grid-template-columns: repeat(3, minmax(170px, 1fr));
   gap: 32px;
   padding: 0 20px;
+  min-height: 600px;
 }
 @media (max-width:50rem) {
   .produtosContainer {
