--- a/src/Components/Categorias.module.css
+++ b/src/Components/Categorias.module.css
@@ -1,12 +1,43 @@
 .nav {
   margin: 0 auto;
   width: 80%;
+  max-width: 1100px;
   text-align: center;
   margin-top: 32px;
 }
 
 .nav h3 {
   margin-bottom: 32px;
+}
+
+.slides {
+  width: 125px;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+
+}
+.slides img {
+  height: 125px;
+  width: 125px;
+  align-self: center;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 1px solid #e6e6e6;
+}
+.slides h3 {
+  text-transform: uppercase;
+  padding-bottom: 0.3125rem;
+  font-family: Quicksand;
+  font-size: .75rem;
+  font-weight: 400;
+  font-stretch: normal;
+  font-style: normal;
+  letter-spacing: .015rem;
+  text-align: center;
+  color: #000;
+  padding-top: 8px;
+  padding-bottom: 16px;
 }
 
 @media (max-width:1000px) {
@@ -25,7 +56,8 @@
       margin-bottom: 16px;
     }
     .nav {
-      margin-top: 16px;
+      position: relative;
+      top: -20px;
     }
 }
 
@@ -40,8 +72,17 @@
     .nav h3 {
       margin-bottom: 16px;
     }
-    .nav {
-      margin-top: 16px;
-    }
+    
+.slides {
+  width: 200px;
+}
+.slides img {
+  height: 100px;
+  width: 100px;
+}
+.slides h3 {
+  font-size: .75rem;
+  padding-top: 16px;
+}
 }
 
