--- a/src/Header.module.css
+++ b/src/Header.module.css
@@ -114,6 +114,12 @@ display: none;
   width: 130px;
   gap: 32px;
 }
+.links {
+  display: inline-grid;
+  letter-spacing: 1.5px;
+  font-size: 12px;
+  border-bottom: 0.125rem solid transparent;
+}
 .styleHome .nav .navMobile .links{
   color: #333;
 }
