--- a/src/Components/produtos/ProdutoSingle.module.css
+++ b/src/Components/produtos/ProdutoSingle.module.css
@@ -1,15 +1,11 @@
-.informacoes {
+.ProductView_container {
   width: 100%;
   margin: 0 auto;
   object-fit: cover;
   padding: 0 20px;
-}
-
-.modalPhoto {
-  width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 0 32px;
+  grid-template-columns: 1fr 1fr ;
+  gap: 4rem;
 }
 
 h1 {
@@ -37,25 +33,28 @@ h1 {
 }
 
 .brand {
+  font-family: Quicksand;
+  font-size: 11px;
   font-weight: 600;
-  font-size: 12px;
-  line-height: 12px;
-  font-family: var(--type-second);
+  letter-spacing: 1.5px;
+  line-height: 11px;
   text-transform: uppercase;
 }
 .name {
-  font-size: 36px;
-  line-height: 36px;
-  font-weight: 500;
-  margin-top: 16px;
-  font-family: var(--type-first);
+  font-family: Tiempos;
+  font-size: 24px;
+  font-weight: 100;
+  letter-spacing: 1.5px;
+  line-height: 40px;
+  margin-bottom: 0.5rem;
+  margin-top: initial;
 }
 .price {
-  font-size: 24px;
-  font-weight: 500;
-  margin-top: 16px;
-  line-height: 24px;
-  font-family: var(--type-first);
+  font-family: Tiempos;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 1.5px;
+  line-height: 16px;
 }
 
 .colors {
@@ -63,10 +62,59 @@ h1 {
   display: grid;
   grid-template-columns: 1fr;
 }
-.coresDiv{
-  display: flex;
-  gap: 16px;
+.colorInput {
+  display: grid;
+  position: relative;
+  width: 20px;
+}
+.colorInput label {
+  border: 1px solid #ccc;
+  border-radius: 50%;
+}
+.colorInput label.active {
+  border: 2px solid black;
+}
+.colorInput input {
+  background-color: #fff;
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  border: 0;
+  bottom: 0;
+}
+.colorInput label {
+  display: inherit;
+  line-height: 1;
+  padding: 0.1875rem;
+  font-size: 0;
+  line-height: 1;
+}
+.spanCor {
+  font-family: Quicksand;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 1.5px;
+  line-height: 22px;
+  margin-bottom: 8px;
+}
+.form_radio_container{
+  display: grid;
+  position: relative;
+  grid-template-columns: repeat(auto-fill, 4rem);
+  gap: 2rem;
   align-items: center;
+}
+.spanColor {
+  display: inline-block;
+  pointer-events: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  z-index: 100;
 }
 .cores {
   width: 26px;
@@ -82,14 +130,19 @@ h1 {
   pointer-events: none;
   opacity: 0.3;
 }
-.cores.active {
+/* .cores.active {
   width: 30px;
   height: 30px;
   border-radius: 50%;
   border: 2px solid black;
   box-shadow: 0 0px 0px 2px white inset;
   padding: 0px;
+} */
 
+.formRadio:checked {
+  border-color: #333;
+  box-shadow: 0 0 0 1px #333;
+  border-radius: 50%;
 }
 
 .sizes {
