--- a/src/Components/Infos.module.css
+++ b/src/Components/Infos.module.css
@@ -8,6 +8,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  box-sizing: border-box;
+  max-width: 100%;
   color: white;
 }
 .infos2 {
@@ -15,6 +17,7 @@
   display: flex;
   gap: 6px;
   height: 40px;
+  box-sizing: border-box;
   width: 100%;
   z-index: 100;
   position: absolute;
