--- a/src/Components/produtos/BreadCrumbs.module.css
+++ b/src/Components/produtos/BreadCrumbs.module.css
@@ -12,7 +12,7 @@
   padding-top: 1rem;
   width: 100%;
   max-width: 1280px;
-  padding-left: 4.0625rem;
+  padding-left: 10px;
 }
 .breadcrumbs nav {
   padding-bottom: 1rem;
