--- a/src/Components/produtos/ProdutoSingle.module.css
+++ b/src/Components/produtos/ProdutoSingle.module.css
@@ -2,10 +2,10 @@
   width: 100%;
   margin: 0 auto;
   object-fit: cover;
-  padding: 0 20px;
+  padding: 0 10px;
   display: grid;
   grid-template-columns: 1fr 1fr ;
-  gap: 4rem;
+  gap: 2rem;
 }
 
 h1 {
@@ -24,6 +24,7 @@ h1 {
 }
 .estoque h3 {
   grid-column: 1/-1;
+  width: 100%;
 }
 .infos {
   display: flex;
@@ -130,14 +131,6 @@ h1 {
   pointer-events: none;
   opacity: 0.3;
 }
-/* .cores.active {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  border: 2px solid black;
-  box-shadow: 0 0px 0px 2px white inset;
-  padding: 0px;
-} */
 
 .formRadio:checked {
   border-color: #333;
@@ -157,6 +150,8 @@ h1 {
 }
 .sizes h4 {
   font-weight: 400;
+  font-family:var(--type-second);
+  font-size: 12px;
 }
 .sizes.active h4 {
   font-weight: 600;
@@ -174,69 +169,58 @@ h1 {
 .adicionar {
   margin-top: 32px;
   border-top: 1px solid #D9D9D9;
-  padding-top: 8px;
-}
-.adicionar h3 {
-  font-family: var(--type-first);
-}
-.contador {
-  display: flex;
-  padding-top: 8px;
-}
-.contador .quantidade{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid #D9D9D9;
-  width: 43px;
-  height: 33px;
-  pointer-events: none;
-}
-
-.contador button {
-  border: none;
-  background: #D9D9D9;
-  height: 33px;
-  width: 42px;
-  cursor: pointer;
-}
-
-.contador .quantidade:focus,
-.contador .quantidade:active{
-  border: 1px solid #D9D9D9;
-  outline: none;
+  width: 100%;
+  display: grid;
 }
 
 .addBag{
-  margin-top: 16px;
-width: 100%;
-max-width: 500px;
-height: 70px;
-font-size: 36px;
+margin-top: 16px;
+min-height: 44px;
+padding-left: 1rem;
+padding-right: 1rem;
+font-size: 12px;
 font-family: var(--type-second);
-background-color: black;
+background-color: #27251f;
+outline: none;
 color: white;
 border: none;
 cursor: pointer;
-font-weight: 500;
+font-weight: 400;
+letter-spacing: 1.5px;
+line-height: 22px;
+width: calc(100% - 4.5rem);
+position: relative;
+left: -2.25rem;
 }
 
 .descricao {
   margin-top: 32px;
 }
 .descricao p{
-  letter-spacing: 1.4px;
-  font-weight: 500;
+  font-family: Quicksand;
   font-size: 12px;
-  padding-bottom: 4px;
-  border-bottom: 3px solid black;
+  font-weight: 400;
+  letter-spacing: 1.5px;
+  line-height: 20px;
+  border-bottom: 2px solid black;
   width: max-content;
+  margin-bottom: 1rem;
 }
 .descricaoTexto {
-  display: block;
-  padding-top: 8px;
-  letter-spacing: 1.1px;
-  font-size: 16px;
-  line-height: 22px;
-  color:#8B8B8B
+  font-family: Quicksand;
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 1.5px;
+  line-height: 20px;
+}
+
+@media (max-width:50rem) {
+  .ProductView_container {
+    display: flex ;
+    flex-direction: column;
+    gap: 2rem;
+  }
+  .colors {
+    margin-top: 32px;
+  }
 }
