--- a/src/Components/slides.css
+++ b/src/Components/slides.css
@@ -1,1 +1,12 @@
-
+.swiper-button-prev {
+  color: black;
+  position: absolute;
+  display: block;
+  left: -2px;
+}
+.swiper-button-next {
+  color: black;
+  position: absolute;
+  display: block;
+  right: -2px;
+}
