--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -4,25 +4,25 @@
 }
 .homeInit{
   position: relative;
-  max-height: 80vh;
-  min-height: 50vh;
+  max-height: 700px;
+  min-height: 300px;
 }
 .fotoHome {
-  max-width: none;
+  max-width: 100%;
   width: 100%;
-  max-height: 80vh;
-  min-height: 50vh;
+  max-height: 700px;
+  min-height: 300px;
   object-fit: cover;
 }
 .fotoHome img {
-  max-width: none;
+  max-width: 100%;
 }
 
 .wrapInit {
   display: flex;
   position: relative;
   z-index: 98;
-  bottom: 100px;
+  bottom: 120px;
   align-items: center;
   justify-content: center;
 }
