--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,7 @@ body {
   --type-first: Helvetica, Arial, sans-serif;
   --type-second: 'Quicksand', sans-serif;
   font-family: var(--type-first);
-  height: calc(100vh + 30rem);
-  height: 100%;
+  min-height: 100%;
 }
 
 h1,
