--- a/src/Components/dashboard/Infos.module.css
+++ b/src/Components/dashboard/Infos.module.css
@@ -7,7 +7,7 @@
   top: 0;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   color: white;
 }
 
