Seleção de cores e barreiras para não adicionar itens que não tem no estoque, alem de algumas mudanças no slide "novamente"

--- a/src/App.css
+++ b/src/App.css
@@ -191,7 +191,7 @@ a {
   border-radius: 5px;
   position: fixed;
   top: 100px;
-  right: 10%;
+  right: 20px;
   background: #333;
   width: max-content;
   font-weight: 500;
