--- a/src/Components/dashboard/forms/Button.module.css
+++ b/src/Components/dashboard/forms/Button.module.css
@@ -22,3 +22,11 @@ box-shadow: 0 0 0 3px #fea, 0 0 0 4px #fb1;
   opacity: 0.5;
   cursor: wait;
 }
+
+@media (max-width:500px) {
+  .button {
+    font-size: 14px;
+    width: max-content;
+    padding: .5rem .6rem;
+  }
+}
