Concluindo carrinho de compras

--- a/src/Components/carrinho/BagItens.module.css
+++ b/src/Components/carrinho/BagItens.module.css
@@ -28,15 +28,50 @@
   font-weight: 500;
   letter-spacing: 1.5px;
   font-style: var(--type-fisrt);
+  margin-bottom: 4px;
+  width: max-content;
+}
+.price {
+  font-family: var(--type-second);
+  letter-spacing: 1.2px;
+}
+.addAmount span {
+  font-family: var(--type-second);
+  letter-spacing: 1.2px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  padding: 4px 0 ;}
+
+.addAmount button {
+  border: 1px solid rgba(0, 0, 0, .5);
+  background-color: black;
+  color: white;
+  font-weight: 500;
+  font-family: var(--type-second);
+  cursor: pointer;
+}
+.addAmount button:first-child {
+  border-radius: 5px 0 0 5px;
+}
+.addAmount button:last-child {
+  border-radius: 0 5px  5px 0;
 }
 
 .description {
-  font-style: var(--type-second);
+  font-family: var(--type-second);
   font-weight: 400;
   font-size: 12px;
   letter-spacing: 1.1px;
 }
 /* Cores */
+.colorSizes {
+  display: flex;
+  align-items: center;
+  grid-column: 1;
+  grid-row: 3;
+  gap: 16px;
+}
+
 
 .color {
   display: flex;
@@ -52,16 +87,18 @@
   letter-spacing: 1.1px;
   border-radius: 9999px;
   cursor: pointer;
+
 }
 .color.selectMode {
-  border-bottom: none;
-  padding-bottom: 5px;
+  border-bottom: 1px solid transparent;
+  border-radius: 15px 15px 0 0;
 }
 .divColorSelected {
   display: grid;
   grid-template-columns: 15px 70px 20px;
   justify-content: center;
   align-items: center;
+
 }
 
 .corSelecionada {
@@ -73,18 +110,16 @@
 .opcoesColors {
   position: absolute;
   background: white;
-  top: 20px;
+  top: 24px;
   left: -1px;
   width: 127px;
-  border: inherit;
-  border-top: none;
-  border-radius: 0 0 20px 20px;
+  border: 1px solid rgba(0, 0, 0, .2);
+  border-radius: 0 0 15px 15px;
   padding: 10px 10px 10px 10px;
   z-index: 10000;
 }
 .opcoesColors ul {
   display: flex;
-
   flex-direction: column;
   gap: 8px;
   font-size: 12px;
@@ -95,13 +130,62 @@
 .opcoesColors ul li {
   display: grid;
   grid-template-columns: 15px 70px 20px;
-
 }
+
+.sizes {
+  width: max-content;
+  display: grid;
+  position: relative;
+}
+
+
+.sizes div {
+  display: flex;
+  align-items: center;
+  border: 1px solid rgba(0, 0, 0, .3);
+  padding: 1px;
+  width: 45px;
+  height: 24px;
+  font-size: 12px;
+  justify-content: end;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.sizes.selectSize div:first-child {
+  border-bottom: 1px solid transparent;
+  border-radius: 10px 10px 0 0;
+}
+.sizes .opcoesSizes {
+  position: absolute;
+  background: white;
+  top: 24px;
+  left: 0px;
+  height: auto;
+  text-align: center;
+  border: 1px solid rgba(0, 0, 0, .2);
+  z-index: 10000;
+  border-radius: 0 0 10px 10px;
+}
+
+.opcoesSizes ul {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 100%;
+  font-size: 12px;
+  font-weight: 400;
+  font-size: 12px;
+  letter-spacing: 1.1px;
+}
+
 
 .addAmount {
   display: flex;
   align-items: center;
   text-align: center;
+  grid-column: 2;
+  grid-row: 3;
 }
 .addAmount span {
   display: block;
@@ -115,13 +199,14 @@
 }
 
 .lixeira {
-  position: relative;
+  position: absolute;
   display:block ;
-  top: -80px;
-  right: -90px;
+  top: 5px;
+  right: 10px;
   fill: #999;
   cursor: pointer;
   width: max-content;
+  z-index: 2000;
 }
 
 .modalDelete {
@@ -135,31 +220,48 @@
   top: 0;
   left: 0;
   height: 100vh;
-  background-color: rgba(0, 0, 0, .1);
+  background-color: rgba(0, 0, 0, .4);
   z-index: 3000;
 }
 
 .gridDelete {
   margin: 0 auto;
-  background-color: black;
-  padding: 16px 20px;
-  color: white;
+  background-color: white;
+  padding: 40px 40px;
+  color: #333;
   letter-spacing: 1.1px;
+  border-radius: 3px;
+  font-size: 14px;
+  text-align: center;
 }
 .botoes {
   display: flex;
   margin-top: 32px;
+  gap: 16px;
 }
 .botoes button {
   border: none;
-  padding: 10px 20px;
+  width: 150px;
+  height: 40px;
   font-size: 16px;
   text-transform: uppercase;
   letter-spacing: 1.5px;
   font-weight: 500;
   font-family: var(--type-second);
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 1px;
+}
+
+.botoes button:last-child{
+  background-color: #333;
+  border: 1px solid #333;
+  color: white;
+}
+.botoes button:first-child{
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, .3);
+  color: 
+  #333;
 }
 .botoes button:hover {
   box-shadow: 0 0 0px 2px rgba(240, 240, 240, .8);
@@ -182,25 +284,56 @@
   .name {
     font-size: 18px;
   }
+  .price {
+    font-size: 14px;
+  }
+  
+
 }
 @media (max-width:450px) {
+
   .bagItem {
     grid-template-columns: 70px 1fr;
-    padding: 20px 15px;
+    padding: 20px 10px;
     gap: 8px;
   }
   .image {
-    height: 70px;
+    height: 80px;
     width: 70px;
+  }
+  .name {
+    font-size: 14px;
+    font-weight: 600;
+  }
+  .price {
+    font-size: 12px;
   }
   .infos {
     display: grid;
     grid-template-columns: 1fr 70px;
   }
-  .name {
-    font-size: 18px;
-  }
+ 
   .description{
     font-size: 11px;
+  }
+  .lixeira {
+    right: 5px;
+  }
+  .lixeira svg {
+    width: 18px;
+  }
+  .colorSizes {
+    gap: 8px;
+  }
+  .divColorSelected {
+    grid-template-columns: 12px 48px 20px;
+    font-size: 10px;
+  }
+  .opcoesColors {
+    width: 102px;
+  }
+  .corSelecionada {
+    width: 8px;
+    height: 8px;
   }
 }
