--- a/src/Components/carrinho/BagItens.module.css
+++ b/src/Components/carrinho/BagItens.module.css
@@ -134,7 +134,6 @@
 
 .sizes {
   width: max-content;
-  display: grid;
   position: relative;
 }
 
@@ -143,6 +142,8 @@
   display: flex;
   align-items: center;
   border: 1px solid rgba(0, 0, 0, .3);
+  font-family: var(--type-second);
+  font-weight: 400;
   padding: 1px;
   width: 45px;
   height: 24px;
@@ -162,7 +163,7 @@
   top: 24px;
   left: 0px;
   height: auto;
-  text-align: center;
+  text-align: start;
   border: 1px solid rgba(0, 0, 0, .2);
   z-index: 10000;
   border-radius: 0 0 10px 10px;
@@ -177,6 +178,13 @@
   font-weight: 400;
   font-size: 12px;
   letter-spacing: 1.1px;
+}
+
+.opcoesSizes ul li {
+  display: grid;
+  grid-template-columns: 17px 1fr;
+  text-align: end;
+  padding: 3px 0;
 }
 
 
@@ -267,7 +275,7 @@
   box-shadow: 0 0 0px 2px rgba(240, 240, 240, .8);
 }
 
-@media (max-width:550px) {
+@media (max-width:35rem) {
   .bagItem {
     grid-template-columns: 80px 1fr;
     padding: 20px;
@@ -300,6 +308,7 @@
   .image {
     height: 80px;
     width: 70px;
+    border-radius: 5px;
   }
   .name {
     font-size: 14px;
@@ -326,14 +335,46 @@
     gap: 8px;
   }
   .divColorSelected {
-    grid-template-columns: 12px 48px 20px;
+    grid-template-columns: 12px 48px 13px;
+    font-size: 10px;
+  }
+  .opcoesColors ul li{
+    grid-template-columns: 12px 48px 13px;
     font-size: 10px;
   }
   .opcoesColors {
-    width: 102px;
+    width: 95px;
   }
   .corSelecionada {
     width: 8px;
     height: 8px;
   }
+
+
+  .sizes svg,
+  .divColorSelected svg {
+    width: 20px;
+    width: 18px;
+  }
+
+  .sizes div {
+    width: 35px;
+    font-size: 10px;
+    border-radius: 10px;
+  }
+  .sizes .opcoesSizes ul li{
+    font-size: 10px;
+  }
+
+  .addAmount span {
+    display: block;
+    width: 20px;
+    font-size: 12px;
+  }
+  .addAmount button {
+
+    width: 20px;
+    height: 25px;
+  }
+  
 }
